--- a/resources/index.html
+++ b/resources/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title>Learn to Paint</title>
-		<link rel="icon" type="image/ico" href="./favicon.ico" />
-		<link rel="stylesheet" href="./client.css" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-	</head>
+    <head>
+        <meta charset="utf-8" />
+        <title>Learn to Paint</title>
+        <link rel="icon" type="image/ico" href="./favicon.ico" />
+        <link rel="stylesheet" href="./client.css" />
+    </head>
 
-	<body class="bg-slate-300">
-		<script src="./client.js" async></script>
-		<div id="rootdiv"></div>
-	</body>
+    <body>
+        <script src="./client.js" async></script>
+        <div id="rootdiv"></div>
+    </body>
 </html>
